# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  aml_lab1_lab2_task6.py  pyproject.toml  task_5.py
mldevops_exercise/: AML_lab1_lab2.py
wandb/: latest-run
wandb/run-20241118_170446-r3mf6pqb/files/: requirements.txt  wandb-metadata.json
